# Bitcoins_app

./: .gitignore  README.md  app.py  config.py  pydantic_models.py  pyproject.toml  tg_bot.py
database/: crud.py  models.py
