[tool.poetry]
name = "bitcoins-app"
version = "0.1.0"
description = ""
authors = ["M4dPac <pac8891@gmail.com>"]
readme = "README.md"
packages = [{include = "bitcoins_app"}]

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
pony = "^0.7.17"
bit = "^0.8.0"
pytelegrambotapi = "^4.14.0"
aiogram = "^3.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
